--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -18,8 +18,11 @@ jobs:
         run: npm ci
       - name: Run compression benchmark
         run: npm run benchmark
-      - name: Ensure generated artifacts are committed
+      - name: Report pending artifact updates
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git diff --exit-code README.md charts
+          git diff --stat README.md charts || true
+          if ! git diff --quiet README.md charts; then
+            echo "::warning::Benchmark artifacts differ from committed versions. Run 'npm run benchmark' locally and commit the updated README.md and charts."
+          fi
