--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
     "chartjs-node-canvas": "^5.0.0",
+    "cities.json": "^1.1.50",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
