--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,15 +3,13 @@ updates:
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "saturday"
+      interval: "daily"
       time: "06:00"
       timezone: "Asia/Tokyo"
     open-pull-requests-limit: 5
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "saturday"
+      interval: "daily"
       time: "06:00"
       timezone: "Asia/Tokyo"
